--- a/style.css
+++ b/style.css
@@ -553,55 +553,13 @@ footer{
 }
 
 
+ @media (max-width:980px){
 
-@media (max-width: 991px){
+
     body{
-        padding: 38px;
+        background-color: var(--bg);
 
     }
-
-    .Skills{
-
-        width: 30vh;
-        height: 30vh;
-        background-color: #fff;
-        color: black;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      
-    }
-
-    .container-proyects{
-        display: block;
-    }
-
-    .container{
-        padding: 50px 30px;
-        width: 100%;
-    }
-
-    .form-input{
-        padding: 15px;
-    }
-
-    footer{
-        height: 35px;
-    }
-    .fa-brands{
-       width: 100%;
-       height: 50px;
-       background-color: #fff;
-       color: black;   
-}
-
-}
-
-
-@media (max-width: 700px){
-     
     .navlabel{
         display: block;
         cursor:pointer;
@@ -609,7 +567,7 @@ footer{
 
     .nav__menu{
       position: fixed;
-      top: 80px;
+      top: 75px;
       bottom: 0;
       background-color: darkgray;
       width: 100vw;
@@ -617,47 +575,293 @@ footer{
       display:flex;
       justify-content: space-evenly;
       flex-direction: column;
-      align-items: center;
+       align-items: center;
+       clip-path: circle(0 at center);
       clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-      transition: clip-path .5s ease-in-out;
+      transition: clip-path .5s ease-in-out;  
     }
 
     .nav__input:checked + .nav__menu{
        clip-path: polygon(0 0,100% 0, 100% 100%, 0 100%);
 
     }
+   .container-text{
+    width: 100%;
 
-    .container-text{
-        
-        top: 80px;
-        bottom: 0;
-        background-color: #fff;
-        color: black;
-        width: 100vw;
-        left: 0;
-        display:flex;
-        justify-content: space-evenly;
-        flex-direction: column;
-        align-items: center;
-        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-        transition: clip-path .5s ease-in-out;
+   }
+      
+   .text{
+        padding:12rem;
+      }
+      
+      .h1-nombre{
+      
+      }
+      
+      
+      .About{
+  
+       margin-top: 180px;
+       margin-left: 80px;
+       font-size: 12px;
+       width: 400px;
+       height: 400px;
+       padding: 20px;
+       overflow: auto;
+      }
+      
+      
+      .h2{
+      font-size: 12px;
+      }
+      
+      
+      .parrafo-2 {
+      font-size: 15px;
+      }
+      
+      .About span{
+      font-size: 15px;
+      color: #fff;
+      }
+      .idiomas{
+      font-size: 15px;
+      }
+      
+      .Skills {
+      margin-left: 120px;
+      display: block;
+      width: 50%;
+      
+      padding: 10px;
+      }
+      #habilidades-h2{
+      font-size: 18px;
+      }
+      
+      .imgh{
+      
+      background-color: transparent;
+      margin: 10px;
+      display:inline-block ;
+
     }
 
-}
 
+     .container{
+        box-shadow: none;
+    }
+       
+   .datos{
+    visibility: hidden;
+   } 
 
-
-@media (max-width:480px){
     form{
-        width: 100%;
-    }
-    .fa-solid{
-        display: block;
-        color: transparent;
+        
+     width: 100%;
+     margin-right: 200px;
+  }
+
+
+}
+
+
+@media(max-width:700px){
+  
+    body{
+        background-color: #fff;
     }
 
-    .p-datos{
+    .nav{
+      background-color: #1e2345;
+     border-radius: 5px;
+
+
+
+}
+
+.nav_container{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    justify-content:flex-end;
+    text-align:center;
+
+    
+    
+}
+
+.nav__menu{
+    display: grid;
+    grid-auto-flow: column;
+    gap: 6em;
+
+  
+  
+}
+
+
+
+
+.gradient-border{
+    width: 100%;
+    height:700px;
+    margin: 0 ;
+    padding: 0;
+
+}
+
+
+
+.About{
+    margin-top: 250px;
+    margin-left: 80px;
+}
+
+
+.h2{
+    font-size: 12px;
+    color: black;
+    }
+    
+    
+    .parrafo-2 {
+    font-size: 15px;
+    color: black;
+    }
+    
+    .About span{
+    font-size: 15px;
+    color: black;
+    }
+    .idiomas{
+    font-size: 15px;
+    color: black;
+    }
+
+
+
+
+
+
+.Skills{
+    width: 100%;
+    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  
+}
+
+
+#habilidades-h2{
+    
+    font-size: 20px;
+
+
+}
+
+.container-proyects{
+    display: block;
+   width: 100%;
+   height: 100%;
+   margin: 100px;
+ 
+}
+
+.cards-lolita{
+    background-color: #1e2345;
+    display: flex;
+   overflow: hidden;
+   flex-wrap: wrap;
+
+}
+
+
+form{
+    visibility: hidden;
+}
+
+
+footer{
+    background-color: #fff;
+}
+
+.footer-links{
+    display: block;
+   width: 100px;
+}
+
+}
+
+
+
+
+@media (max-width:520px){
+
+     .nav_container{
+        width: 100%;
+     }
+
+
+    .gradient-border{
+        width: 100%;
+        height:700px;
+      
+    }
+    
+
+   
+    .h2{
+        font-size: 12px;
+        color: black;
+        }
+        
+        
+        .parrafo-2 {
+        font-size: 15px;
+        color: black;
+        }
+        
+        .About span{
+        font-size: 15px;
+        color: black;
+        }
+        .idiomas{
+        font-size: 15px;
+        color: black;
+        }
+    .Skills{
+        width: 100%;
+        margin: 2px;
+    }
+
+    footer{
+        width: 100%;
+        background-color: #fff;
+    }
+
+    .footer-links{
         display: block;
-        color: transparent;
+        width: 20px;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+   
+
+
+
+ 
